# aoi-sentinel

./: .env.example  .gitignore  README.md  pyproject.toml
aoi_sentinel/: __init__.py  cli.py
aoi_sentinel/adapters/: __init__.py  base.py
aoi_sentinel/adapters/generic_csv/: __init__.py
aoi_sentinel/adapters/koh_young/: __init__.py
aoi_sentinel/adapters/saki/: __init__.py
aoi_sentinel/data/: __init__.py  dataset.py  saki.py
aoi_sentinel/data/benchmarks/: __init__.py  common.py  deeppcb.py  soldef.py  visa.py
aoi_sentinel/eval/: __init__.py  baseline.py  cost_curves.py  metrics.py  npi_metrics.py  runner.py  tracker.py
aoi_sentinel/models/analyzer_3d/: __init__.py
aoi_sentinel/models/classifier/: __init__.py  _dataset_impl.py  _impl.py  dataset.py  infer.py  model.py  train.py
aoi_sentinel/models/classifier_2d/: __init__.py  model.py
aoi_sentinel/models/detector_2d/: __init__.py
aoi_sentinel/models/lightweight/: __init__.py  encoder.py
aoi_sentinel/models/policy/: __init__.py  _transformer_impl.py  actor_critic.py  lagrangian_ppo.py  rollout_buffer.py  transformer_baseline.py
aoi_sentinel/models/rag/: __init__.py
aoi_sentinel/models/vmamba/: __init__.py  image_encoder.py  pure_torch_mamba.py  sequence_encoder.py
aoi_sentinel/pipeline/: __init__.py  inference.py
aoi_sentinel/runtime/: __init__.py  demo_loop.py  edge.py  label_queue.py  model_registry.py  modes.py  safety_gate.py  trainer_server.py
aoi_sentinel/serve/: __init__.py  app.py
aoi_sentinel/sim/: __init__.py  cost.py  label_oracle.py  npi_env.py
aoi_sentinel/train/: classifier_2d.py  stage0_pretrain.py  stage1_npi_rl.py
aoi_sentinel/ui/: __init__.py
aoi_sentinel/ui/web/: __init__.py  app.py
aoi_sentinel/ui/web/static/: app.css  app.js
aoi_sentinel/ui/web/templates/: index.html
configs/: classifier_2d.yaml  stage0_pretrain.yaml  stage0_pretrain_colab.yaml  stage1_npi_rl.yaml  stage1_npi_rl_colab.yaml  stage1_npi_rl_light.yaml
deploy/dgx_spark/: setup.sh
deploy/jetson_nano_poc/: README.md  aoi-demo.service  setup.sh
deploy/jetson_nano_poc/scripts/: make_demo_bundle.py
deploy/jetson_orin_nano/: aoi-edge.service  setup.sh
deploy/trainer_server/: docker-compose.yaml
docs/: ai_manufacturing_standards.md  demo_playbook_kr.md  deployment_topology.md  hardware_bom.md  npi_problem_formulation.md  setup_colab.md  setup_wsl.md  sota_landscape.md  standardization_methodology.md  strategic_brief.md  vendor_adapter_guide.md
docs/sales/: anchor_outreach_template_kr.md  build_pitch_deck.js  build_pitch_deck_general.js  build_pitch_deck_general_vision.js  build_pitch_deck_rl_validation.js  build_pitch_deck_strategic.js  loi_template_kr.md  pilot_1pager_en.md  pilot_1pager_kr.md  pilot_evidence_kr.md  pitch_deck_general_kr.md  pitch_deck_general_kr.pptx  pitch_deck_general_vision_kr.md  pitch_deck_general_vision_kr.pptx  pitch_deck_kr.md  pitch_deck_kr.pptx  pitch_deck_rl_validation_kr.md  pitch_deck_rl_validation_kr.pptx  pitch_deck_strategic_kr.md  pitch_deck_strategic_kr.pptx
notebooks/: colab_quickstart.ipynb
scripts/: bench_mamba_vs_transformer.py  download_deeppcb.py  download_visa.py
tests/: test_adapters.py  test_classifier_structure.py  test_cost.py  test_eval.py  test_metrics.py  test_npi_env.py  test_ppo_structure.py  test_pure_torch_mamba.py  test_runtime.py
